fix the broken ui in key page

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,7 +45,7 @@
 
 :root {
     --radius: 0.625rem;
-    --background: oklch(1 0 0);
+    --background: #18171b;
     --foreground: oklch(0.141 0.005 285.823);
     --card: oklch(1 0 0);
     --card-foreground: oklch(0.141 0.005 285.823);
@@ -79,7 +79,7 @@
 }
 
 .dark {
-    --background: oklch(0.141 0.005 285.823);
+    --background: #18171b;
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.21 0.006 285.885);
     --card-foreground: oklch(0.985 0 0);
@@ -118,7 +118,7 @@
     }
     body {
         @apply bg-background text-foreground;
-        background-color: black;
+        background-color: dark;
         ::-webkit-scrollbar {
             display: none;
         }
